gap fix about page

--- a/style.css
+++ b/style.css
@@ -461,8 +461,8 @@ footer {
 
 /* about page specific styles */
 
-.grid-2{
-  margin-right: 10px;
+.about-layout{
+  margin-right: 20px;
 }
 
 /* Portfolio viewer "nested sub-site" */
